--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html>
     <head>
-        <title>lixin</title>
+        <title>december</title>
     </head>
 
     <body>
-        <h1>welcome to lixin's homePage!</h1>
+        <h1>welcome to december's homePage!</h1>
     </body>
 </html>
