--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!doctype html>
 <html>
     <head>
+        <meta charset="utf-8" />
         <title>december</title>
+        <meta http-equiv="refresh" content="5;url=index.md" />
     </head>
 
     <body>
